// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyDetailsForm> @Render User clicks on "Edit" button should render form available to edit 1`] = `
<Row
  noGutters={false}
>
  <Box
    max={500}
  >
    <h3
      className="mb-5"
    >
      My Details
    </h3>
    <Form
      id="MyDetailsForm"
      inline={false}
      onSubmit={[Function]}
    >
      <FormGroup
        className="pb-3"
        controlId="formPlaintextFirstName"
      >
        <FormLabel
          className="text-muted"
          column={false}
          srOnly={false}
        >
          First Name:
        </FormLabel>
        <FormControl
          isInvalid={false}
          name="firstName"
          onChange={[Function]}
          placeholder="Bob"
          readOnly={false}
          required={true}
          type="text"
          value="Bob"
        />
      </FormGroup>
      <FormGroup
        controlId="formPlaintextPassword"
      >
        <FormLabel
          className="text-muted"
          column={false}
          srOnly={false}
        >
          Last Name:
        </FormLabel>
        <FormControl
          isInvalid={false}
          name="lastName"
          onChange={[Function]}
          placeholder="Doh"
          readOnly={false}
          required={true}
          type="input"
          value="Doh"
        />
        <Feedback
          type="invalid"
        />
      </FormGroup>
      <Button
        active={false}
        className="float-right"
        disabled={false}
        id="MyDetailsFormSave"
        style={
          Object {
            "width": 100,
          }
        }
        type="submit"
        variant="primary"
      >
        Save
      </Button>
      <Button
        active={false}
        className="float-right mr-3"
        disabled={false}
        id="MyDetailsFormCancel"
        onClick={[Function]}
        style={
          Object {
            "width": 100,
          }
        }
        type="button"
        variant="secondary"
      >
        Cancel
      </Button>
    </Form>
  </Box>
</Row>
`;

exports[`<MyDetailsForm> @Render should render default state which is not available to edit 1`] = `
<Row
  noGutters={false}
>
  <Box
    max={500}
  >
    <h3
      className="mb-5"
    >
      My Details
    </h3>
    <Form
      id="MyDetailsForm"
      inline={false}
      onSubmit={[Function]}
    >
      <FormGroup
        className="pb-3"
        controlId="formPlaintextFirstName"
      >
        <FormLabel
          className="text-muted"
          column={false}
          srOnly={false}
        >
          First Name:
        </FormLabel>
        <FormControl
          isInvalid={false}
          name="firstName"
          onChange={[Function]}
          placeholder="Bob"
          readOnly={true}
          required={true}
          type="text"
          value="Bob"
        />
      </FormGroup>
      <FormGroup
        controlId="formPlaintextPassword"
      >
        <FormLabel
          className="text-muted"
          column={false}
          srOnly={false}
        >
          Last Name:
        </FormLabel>
        <FormControl
          isInvalid={false}
          name="lastName"
          onChange={[Function]}
          placeholder="Doh"
          readOnly={true}
          required={true}
          type="input"
          value="Doh"
        />
        <Feedback
          type="invalid"
        />
      </FormGroup>
      <Button
        active={false}
        className="float-right"
        disabled={false}
        id="MyDetailsFormEdit"
        onClick={[Function]}
        style={
          Object {
            "width": 100,
          }
        }
        type="button"
        variant="primary"
      >
        Edit
      </Button>
    </Form>
  </Box>
</Row>
`;
